sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: not found: value indSorted
    var v = getValue(indSorted);
                     ^AlgInsertionSort:8: error: type mismatch;
 found   : Unit
 required: Int
    setValue(indLast, v);
             ^AlgInsertionSort:23: warning: enclosing method backMinus has result type Unit: return value discarded
      return indLastCopied;
      ^AlgInsertionSort:26: warning: enclosing method backMinus has result type Unit: return value discarded
      return indLastCopied;
      ^