sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for(j <- 1 to getValueCount()-1){
    var v = getValue(indSorted);
  	var indLast = backMinus(j, v);
    
  	setValue(indLast, v);
    
  }
  
}


def backMinus(indSorted:Int, v:Int){
  var indLastCopied = indSorted;
  for(i <- 1 to indSorted){
    if(!isSmallerThan(indSorted-i, v)){
      copy(indSorted-i,indSorted-i+1);
      indLastCopied = indSorted-i;
    }else{
  		setValue(indLastCopied, v);
      return indLastCopied;
    }
	
      return indLastCopied;
    	
  }
  
}